Refactored the code due to sonarqube issues